message TestMessage {
  required string text = 1;
}